syntax = "proto3";

package events;


service EventsService {
  rpc EventStream(stream EventRequest) returns (stream EventResponse);
}


message EventRequest {
  string eventName = 1;
  string payload = 3;
}

message EventResponse {
  string status = 1;
  string message = 2;
}